fix the ul .current crew going out of place when the screen is even slightly smaller

--- a/src/assets/css/crew.css
+++ b/src/assets/css/crew.css
@@ -73,6 +73,8 @@ body{
 
 .description-wrapper{
     flex:1; /*makes the element fill the rest of the container*/
+    display: flex;
+    flex-direction: column;
 }
 
 .crew-position{
@@ -87,16 +89,17 @@ body{
 }
 .crew-info{
 width: 70%;
-color: var(--secondary-color);;
+color: var(--secondary-color);
+height: 200px;
 }
 
 .current-crew{
     list-style: none;
     display: flex;
     gap: 24px;
-   position: absolute;
-   left: 0;
-   bottom: 300px;
+   /* position: absolute;
+   left: 0px;
+   bottom: 300px; */
    margin: 0;
    margin-top: 0;
    padding: 0;
